--- a/rps-ui/style.css
+++ b/rps-ui/style.css
@@ -1,25 +1,46 @@
 body {
     display: flex;
+    align-items: center;
+    background-image: url("./images/background.jpg");
     flex-direction: column;
-    background-color: black;
-    color: white;
+    color: rgb(0, 174, 255);
+    font-size: 25px;
+}
+
+button {
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+.game {
+    background-color: rgba(20, 20, 20, 0.5);
+    margin-top: 20px;
 }
 
 .top {
     display: flex;
     flex-direction: column;
+    /* background-color: rgb(0, 255, 255, 0.5); */
 }
 
 .bottom {
     display: flex;
     flex-direction: column;
+    /* background-color: rgb(255, 255, 0, 0.5); */
 }
 
 .records {
     display: flex;
+    justify-content: center;
 }
 
 .wld {
     display: flex;
     padding-right: 15px;
 }
+
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+
